--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>模写3</title>
+    <title>コーポレートデモ１</title>
  </head>
  <body>
     <header>
