--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <img class="logo2" src="">
         </div>
         <div class="header1">
-            <div class=head1-1><img class="head1" src="img/kins_nissy_logo.svg"></div>
+            <div class=head1-1><img class="head1" src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/afe714e27ff6cdf4f591b10a0be8068cb65b60d8/kins_nissy_logo.svg"></div>
         </div>
     </header>
     <main>
         <div class="section1-1">
             <div class="section1">
-                <p class="sec1-1-1"><img class="sec1" src="img/nissy_kins_logo.svg"></p>
-                <p class="sec1-1-1"><img class="sec1" src="img/nissy_kins_kuwashiku.svg"></p>
+                <p class="sec1-1-1"><img class="sec1" src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/afe714e27ff6cdf4f591b10a0be8068cb65b60d8/nissy_kins_logo.svg"></p>
+                <p class="sec1-1-1"><img class="sec1" src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/afe714e27ff6cdf4f591b10a0be8068cb65b60d8/nissy_kins_kuwashiku.svg"></p>
             </div>    
         </div>
         <div class="section2">
             <div class="sec2-1-0">
-                <img class="sec2-1" src="img/top_stay.webp">
+                <img class="sec2-1" src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/top_stay.webp">
             </div>
             <div class="sec2-2">
                 <h1>菌と生きる。体が生きる。</h1>
