--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                         中には、従来のスキンケアの常識を遥かに超えるほど、肌にとって有益な菌もいるかもしれません。
                         まだ誰も知らないスーパー善玉菌の本当の姿を追い続ける、KINS研究員皆川にインタビューしました。</p>
                         <div class="sec3-1-1">
-                            <img src="img/slider_0.webp" class="sec3-1-2">
-                            <img src="img/slider_1.webp" class="sec3-1-2">
-                            <img src="img/slider_2.webp" class="sec3-1-2">
+                            <img src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/slider_0.webp" class="sec3-1-2">
+                            <img src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/slider_1.webp" class="sec3-1-2">
+                            <img src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/slider_2.webp" class="sec3-1-2">
                         </div>
                 </div>
-                <div class="sec3-2-0"><img  class="sec3-2" src="img/slider_1.webp"></div>
+                <div class="sec3-2-0"><img  class="sec3-2" src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/slider_1.webp"></div>
             </div>
         </div>
         <div class="section4">
@@ -79,18 +79,18 @@
                 </div>
                 <div class="sec4-1-2">
                     <div class="sec4-1-2-1">
-                        <p class="p4"><img src="img/kins_web_pc_01_14.png" class="sec4-img"></p>
+                        <p class="p4"><img src="https://github.com/hiroyukie/corporatedemo1/blob/main/kins_web_pc_01_14.png?raw=true" class="sec4-img"></p>
                         <p class="p3">TEST</p>
                     </div>
                     <div class="sec4-1-2-2">
                         <img src="">
                     </div>
                     <div class="sec4-1-2-1">
-                        <p class="p4"><img src="img/kins_web_pc_01_16.png" class="sec4-img"></p>
+                        <p class="p4"><img src="https://github.com/hiroyukie/corporatedemo1/blob/main/kins_web_pc_01_16.png?raw=true" class="sec4-img"></p>
                         <p class="p3">CONCIERGE</p>
                     </div>
                     <div class="sec4-1-2-1">
-                        <p class="p4"><img src="img/kins_web_pc_01_18.png" class="sec4-img"></p>
+                        <p class="p4"><img src="https://github.com/hiroyukie/corporatedemo1/blob/main/kins_web_pc_01_18.png?raw=true" class="sec4-img"></p>
                         <p class="p3">SUPPLEMENT</p>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     <a class="sec6-a2" href="#">商品を見る</a>
                 </div>
                 <div class="sec6-2">
-                    <img src="img/BoosterThumb_1_198ccaf2-8843-40b0-8100-55491ff4d10c_920x780_crop_center.png" class="sec-img1">
+                    <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/BoosterThumb_1_198ccaf2-8843-40b0-8100-55491ff4d10c_920x780_crop_center.png?raw=true" class="sec-img1">
                     <a class="sec6-a1" href="#">
                     <p class="sec6-p3">BOOSTER</p>
                     <p class="sec6-p4">菌が育んだ発酵成分が詰まった美容液です。</p>
@@ -122,7 +122,7 @@
                     <a class="sec6-a2" href="#">商品を見る</a>
                 </div>
                 <div class="sec6-1">
-                    <img src="img/SERUM_thum__DCD4CD_sp_01_00a0c086-f5bb-4796-8b94-b96a7021e4f9_920x780_crop_center.png" class="sec-img1">
+                    <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/SERUM_thum__DCD4CD_sp_01_00a0c086-f5bb-4796-8b94-b96a7021e4f9_920x780_crop_center.png?raw=true" class="sec-img1">
                     <a class="sec6-a1" href="#">
                     <p class="sec6-p3">SERUM</p>
                     <p class="sec6-p4">発酵エキスで肌を包み、うるおいを閉じ込める美容液です。</p>
@@ -130,7 +130,7 @@
                     <a class="sec6-a2" href="#">商品を見る</a>
                 </div>
                 <div class="sec6-2">
-                    <img src="img/Essence2Thumb_920x780_crop_center.png" class="sec-img1">
+                    <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/Essence2Thumb_920x780_crop_center.png?raw=true" class="sec-img1">
                     <a class="sec6-a1" href="#">
                     <p class="sec6-p3">ESSENCE</p>
                     <p class="sec6-p4">乳酸菌が作り出した400種類以上の成分が紡ぎ出すエッセンス。発酵のチカラを毎日の生活に気軽に取り入れられます。</p>
@@ -138,7 +138,7 @@
                     <a class="sec6-a2" href="#">商品を見る</a>
                 </div>
                 <div class="sec6-1">
-                    <img src="img/facemask_2_920x780_crop_center.png" class="sec-img1">
+                    <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/facemask_2_920x780_crop_center.png?raw=true" class="sec-img1">
                     <a class="sec6-a1" href="#">
                     <p class="sec6-p3">FACEMASK</p>
                     <p class="sec6-p4">潤いを与える乳酸菌を配合したフェイスマスク（4枚入り）です。</p>
@@ -146,7 +146,7 @@
                     <a class="sec6-a2" href="#">商品を見る</a>
                 </div>
                 <div class="sec6-2">
-                    <img src="img/supplement_f8c1bcf7-b532-4e30-bf94-e16eae7c77bf_920x780_crop_center.png" class="sec-img1">
+                    <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/supplement_f8c1bcf7-b532-4e30-bf94-e16eae7c77bf_920x780_crop_center.png?raw=true" class="sec-img1">
                     <a class="sec6-a1" href="#">
                     <p class="sec6-p3">SUPPLEMENTS</p>
                     <p class="sec6-p4">乳酸菌など22種類の菌を配合した、カスタマイズできるサプリメントです。</p>
@@ -160,7 +160,7 @@
             <h5>KINS MY SPECIAL</h5>
             <div class="sec7-0">
                 <div class="sec7-1">
-                    <img src="img/top_podcast_img.webp" class="sec7-1-1">
+                    <img src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/top_podcast_img.webp" class="sec7-1-1">
                     <p class="sec7-1-2" href="#">ARCHIVES</p>
                 </div>
                 <div class="sec7-2">
@@ -174,17 +174,17 @@
             </div>
                 <div class="sec7-3">
                     <div class="sec7-3-2">
-                        <img src="img/48_ext_01_0.png" class="sec7-3-2-1">
+                        <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/28_ext_01_0.png?raw=true" class="sec7-3-2-1">
                         <p class="sec7-3-2-2">
                             GLIM SPANKYの松尾レミさん。 子どもの頃から好きなモノ、最近ハマっていることまでたっぷりと！</p>
                     </div>
                     <div class="sec7-3-2">
-                        <img src="img/47_ext_01_0.png" class="sec7-3-2-1">
+                        <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/47_ext_01_0.png?raw=true" class="sec7-3-2-1">
                         <p class="sec7-3-2-2">
                            歌手の元ちとせさん。奄美大島には◯◯を食べる文化が無い無い！？さらに、奄美大島での生活のお話をたっぷりと！</p>
                     </div>
                     <div class="sec7-3-2">
-                        <img src="img/46_ext_01_0.png" class="sec7-3-2-1">
+                        <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/46_ext_01_0.png?raw=true" class="sec7-3-2-1">
                         <p class="sec7-3-2-2">
                             アーティストの水樹奈々さん。声優、シンガーとして活躍されている水樹さんのパワーの源とは？たっぷり伺います。</p>
                     </div>
@@ -194,7 +194,7 @@
             <h5>PODCAST PROGRAM</h5>
             <div class="sec8-0">
                 <div class="sec8-1">
-                    <img src="img/podcast_main.webp" class="sec8-1-1">
+                    <img src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/podcast_main.webp" class="sec8-1-1">
                 </div>
                 <div class="sec8-2">
                     <p class="sec8-2-1">Spotify, Apple Podcast, Google Podcast, Amazon music</p>
@@ -214,17 +214,17 @@
                 <p class="sec8-1-2">ALL CONTENTS</p>
                 <div class="sec8-5">
                         <div class="sec8-3-2">
-                            <img src="img/24_ext_01_0.jpeg" class="sec8-3-2-1">
+                            <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/24_ext_01_0.jpeg?raw=true" class="sec8-3-2-1">
                             <p class="sec8-3-2-2">
                             タレントの眞鍋かをりさんとの対談Vol.1は、チーズのお話。</p>
                         </div>
                         <div class="sec8-3-2">
-                            <img src="img/25_ext_01_0.png" class="sec8-3-2-1">
+                            <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/25_ext_01_0.jpeg?raw=true" class="sec8-3-2-1">
                             <p class="sec8-3-2-2">
                             発酵食品ソムリエを持つタレントの井上咲楽さん。対談は発酵食のお話し。</p>
                         </div>
                         <div class="sec8-3-2">
-                            <img src="img/26_ext_01_0.jpg" class="sec8-3-2-1">
+                            <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/26_ext_01_0.jpeg?raw=true" class="sec8-3-2-1">
                             <p class="sec8-3-2-2">
                             優木まおみさんとピラティスなどの運動や発酵食の話から美容に関するお悩み相談まで。</p>
                         </div>
@@ -235,18 +235,18 @@
         <div class="section9">
             <h5>KINS USER VOICE</h5>
             <div class="sec9-1">
-                <img src="img/611db2f4aabd6_155543523_108014924676365_8655061761693142149_n.jpg" class="sec9-1-1">
-                <img src="img/6119d0df0112c_202254271_3109379826015291_4998871643986597209_n.jpg" class="sec9-1-1">
-                <img src="img/6119d0df0112c_202254271_3109379826015291_4998871643986597209_n.jpg" class="sec9-1-1">
-                <img src="img/611bdb63e74c6_238387970_577497036759623_4764710708359577786_n.jpg" class="sec9-1-1">
-                <img src="img/611db2e1a3578_159600529_950510892182931_5899064488233616652_n.jpg" class="sec9-1-1">
-                <img src="img/611e309c0c312_210448720_1146720865811164_1941237137821025404_n.jpg" class="sec9-1-1">
-                <img src="img/611e30a21974e_169638276_464770284857023_586712148045127726_n.jpg" class="sec9-1-1">
-                <img src="img/6119ccec1f1e1_235784415_345152423743656_8884467559272703854_n.jpg" class="sec9-1-1">
-                <img src="img/6119d1329a9db_200797285_485446405898931_4048667186771597257_n.jpg" class="sec9-1-1">
-                <img src="img/6119d46227ad4_227594723_953000241941803_9133927967558605035_n.jpg" class="sec9-1-1">
-                <img src="img/611db2ea35bfd_187214429_775224386502602_1635001817764834060_n.jpg" class="sec9-1-1">
-                <img src="img/611db2ea35bfd_187214429_775224386502602_1635001817764834060_n.jpg" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/611db2f4aabd6_155543523_108014924676365_8655061761693142149_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/6119d0df0112c_202254271_3109379826015291_4998871643986597209_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/6119d0df0112c_202254271_3109379826015291_4998871643986597209_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/611bdb63e74c6_238387970_577497036759623_4764710708359577786_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/611db2e1a3578_159600529_950510892182931_5899064488233616652_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/611e309c0c312_210448720_1146720865811164_1941237137821025404_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/611e30a21974e_169638276_464770284857023_586712148045127726_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/6119ccec1f1e1_235784415_345152423743656_8884467559272703854_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/6119d1329a9db_200797285_485446405898931_4048667186771597257_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/6119d46227ad4_227594723_953000241941803_9133927967558605035_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/611db2ea35bfd_187214429_775224386502602_1635001817764834060_n.jpg?raw=true" class="sec9-1-1">
+                <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/611db2ea35bfd_187214429_775224386502602_1635001817764834060_n.jpg?raw=true" class="sec9-1-1">
             </div>
             <div class="sec9-2-0"><a class="sec9-2" href="#">もっと見る</a></div>
         </div>
@@ -255,7 +255,7 @@
             <div class="sec10-0">
                 <div class="sec10-1">
                     <div class="sec10-1-3">
-                        <img src="img/a24f436f58bf068008e920ae9e50924be29eba62-original.jpg" class="sec10-1-0">
+                        <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/a24f436f58bf068008e920ae9e50924be29eba62-original.jpg?raw=true" class="sec10-1-0">
                     </div>
                     <div class="sec10-1-0">
                         <a class="sec10-1-1" href="#">いつものバスタイムが腸活に！お風呂でできる簡単腸ケア習慣をスタート</a>
@@ -267,7 +267,7 @@
                 </div>
                 <div class="sec10-1">
                     <div class="sec10-1-3">
-                        <img src="img/6be126c699757d5b89bd51515faa952a99946ada-original.jpg" class="sec10-1-0">
+                        <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/6be126c699757d5b89bd51515faa952a99946ada-original.jpg?raw=true" class="sec10-1-0">
                     </div>
                     <div class="sec10-1-0">
                         <a class="sec10-1-1" href="#">甘味料でもっと菌ケア日々是好日</a>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="sec10-1">
                     <div class="sec10-1-3">
-                        <img src="img/c7e670b8c8356115225435159cf6f8d2dfbb92e8-original.jpg" class="sec10-1-0">
+                        <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/611db2f4aabd6_155543523_108014924676365_8655061761693142149_n.jpg?raw=trueimg/c7e670b8c8356115225435159cf6f8d2dfbb92e8-original.jpg" class="sec10-1-0">
                     </div>
                     <div class="sec10-1-0">
                         <a class="sec10-1-1" href="#">「次世代レチノール」として大注目の成分。「バクチオール」とは？</a>
@@ -309,7 +309,7 @@
             <div class="sec11-2-0"><a class="sec11-2" href="#">NEWSを全て見る</a></div>
         </div>
         <div class="section12">
-            <a href="#" class="sec12-1"><img src="img/Group_851.svg" ></a>
+            <a href="#" class="sec12-1"><img src="https://raw.githubusercontent.com/hiroyukie/corporatedemo1/090f7e17cda20fa61c3c0d1fba1b0cad91968ff5/Group_851.svg" ></a>
         </div>
 
     </main>
