--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h4>その他の人気商品</h4>
             <div class="sec6-0">
                 <div class="sec6-1">
-                    <img src="img/CLEANSINGOIL_products_一覧3.jpg" class="sec-img1">
+                    <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/CLEANSINGOIL_products_%E4%B8%80%E8%A6%A73.jpg?raw=true" class="sec-img1">
                     <a class="sec6-a1" href="#">
                     <p class="sec6-p3">CLEANSING OIL</p>
                     <p class="sec6-p4">ダブル洗顔不要、一本でメイク落としと洗顔が簡潔。発酵の力で肌のうるおいを守るクレンジングオイル。</p>
@@ -219,12 +219,12 @@
                             タレントの眞鍋かをりさんとの対談Vol.1は、チーズのお話。</p>
                         </div>
                         <div class="sec8-3-2">
-                            <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/25_ext_01_0.jpeg?raw=true" class="sec8-3-2-1">
+                            <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/25_ext_01_0.png?raw=true" class="sec8-3-2-1">
                             <p class="sec8-3-2-2">
                             発酵食品ソムリエを持つタレントの井上咲楽さん。対談は発酵食のお話し。</p>
                         </div>
                         <div class="sec8-3-2">
-                            <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/26_ext_01_0.jpeg?raw=true" class="sec8-3-2-1">
+                            <img src="https://github.com/hiroyukie/corporatedemo1/blob/main/26_ext_01_0.jpg?raw=true" class="sec8-3-2-1">
                             <p class="sec8-3-2-2">
                             優木まおみさんとピラティスなどの運動や発酵食の話から美容に関するお悩み相談まで。</p>
                         </div>
